styles.css
*,
*::after,
*::before {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --cell-size: 50px;
  --marker-size: calc(var(--cell-size) * 0.9);
  --large-cell-size: 200px;
  --large-marker-size: calc(var(--large-cell-size) * 0.9);

  --media-492px-cell-size: 25px;
  --media-492px-marker-size: calc(25px * 0.9);
  --media-492px-large-cell-size: 100px;
  --media-492px-large-marker-size: calc(
    var(--media-492px-large-cell-size) * 0.9
  );

  --button-padding: 0.25em 0.5em;
  --small-padding: 1rem;
  --medium-padding: 3rem;
  --large-padding: 5rem;
  --border-line: 1px solid black;
  --background-grey: lightgrey;
  --border-radius: 1.25rem;
  --background-hover: black;
  --background-transparent: rgba(0, 0, 0, 0.9);
  --primary-color: #5887ff;
  --background-color-noughts: #0cca4a;
  --background-color-crosses: #9c0d38;
}

body,
html {
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Arial, sans-serif;
}

main {
  width: inherit;
  height: inherit;
  padding: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap-reverse;
  gap: var(--medium-padding);
}

.left {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--small-padding);
}

.right {
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: var(--medium-padding);
  flex: 1;
}

.right h1 {
  display: flex;
  flex-direction: column;
  font-size: 3.5rem;
  text-align: center;
  font-family: "Holtwood One SC";
  color: var(--primary-color);
  line-height: 1.2;
}

.noughts-and-crosses-text {
  width: 100%;
  min-width: max-content;
  font-size: 2.5rem;
}

.noughts {
  color: var(--background-color-noughts);
}

.crosses {
  color: var(--background-color-crosses);
}

.container {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: var(--small-padding);
  border: var(--border-line);
  border-radius: var(--small-padding);
  box-shadow: 10px 10px 10px var(--background-transparent);
}

.board {
  width: 100%;
  height: 100%;
  padding: 1.25rem;
  display: grid;
  justify-content: center;
  align-content: center;
  justify-items: center;
  align-items: center;
  position: relative;
  grid-template-columns: repeat(3, auto);
  border: var(--border-line);
}

.cell {
  width: var(--cell-size);
  height: var(--cell-size);
  border: var(--border-line);
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
}

.board.disable-click {
  pointer-events: none;
  background-color: var(--background-grey);
}

.board.allow-click {
  pointer-events: auto;
}

.winning-message {
  display: none;
  position: fixed;
  font-family: "Holtwood One SC";
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--background-transparent);
  justify-content: center;
  align-items: center;
  text-align: center;
  color: white;
  font-size: var(--large-padding);
  flex-direction: column;
}

.winning-message button {
  color: white;
  font-size: var(--medium-padding);
  background-color: var(--primary-color);
  border: 1px solid var(--primary-color);
  padding: var(--button-padding);
  cursor: pointer;
  border-radius: var(--border-radius);
}

.winning-message button:hover {
  color: black;
}

.winning-message[data-winning-message-text="cross"] {
  color: var(--background-color-crosses);
}

.winning-message[data-winning-message-text="circle"] {
  color: var(--background-color-noughts);
}

.winning-message.show {
  display: flex;
}

.button-container button {
  font-size: var(--small-padding);
  background-color: white;
  border: var(--border-line);
  padding: var(--button-padding);
  margin-top: var(--small-padding);
  cursor: pointer;
  border-radius: var(--border-radius);
}

.button-container button:hover {
  background-color: var(--background-hover);
  color: white;
  border-color: white;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.9);
  z-index: 997;
  display: none;
}

.overlay.visible {
  display: block;
  pointer-events: auto;
}

.how-to-play {
  display: flex;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 0.9);
  padding: var(--medium-padding);
  border-radius: var(--border-radius);
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
  font-size: 1.3rem;
}

.view-turn {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: var(--small-padding);
  border: none;
}

.view-turn-box {
  flex: 2;
  font-size: 1.5rem;
  color: white;
  border: 1px solid black;
  text-align: center;
  border-radius: var(--small-padding);
  padding: var(--button-padding);
  background-color: var(--background-color-noughts);
  border: 1px solid var(--background-color-noughts);
}

.view-turn-box.crosses-turn {
  background-color: var(--background-color-crosses);
  border: 1px solid var(--background-color-crosses);
}

#undo-turn {
  font-size: 1.5rem;
  background-color: var(--primary-color);
  color: white;
  border: 1px solid var(--primary-color);
  padding: var(--button-padding);
  cursor: pointer;
  border-radius: var(--small-padding);
  flex: 1;
}

#undo-turn:hover {
  color: black;
}

#undo-turn.grayed-out {
  pointer-events: none;
  background-color: gray;
  border: 1px solid gray;
}

#restart-media-query {
  font-size: 1.5rem;
  background-color: var(--primary-color);
  color: white;
  border: 1px solid var(--primary-color);
  padding: var(--button-padding);
  cursor: pointer;
  border-radius: var(--small-padding);
  flex: 1;
}

#restart-media-query:hover {
  color: black;
}

.cell.x,
.cell.circle,
.large-cell.large-x,
.large-cell.large-circle {
  cursor: not-allowed;
  pointer-events: none;
}

.cell:first-child,
.cell:nth-child(2),
.cell:nth-child(3),
.board:first-child,
.board:nth-child(2),
.board:nth-child(3) {
  border-top: none;
}

.cell:nth-child(3n + 1),
.board:nth-child(3n + 1) {
  border-left: none;
}

.cell:nth-child(3n + 3),
.board:nth-child(3n + 3) {
  border-right: none;
}

.cell:last-child,
.cell:nth-child(8),
.cell:nth-child(7),
.board:last-child,
.board:nth-child(8),
.board:nth-child(7),
.board:nth-child(9) {
  border-bottom: none;
}

.cell.x::before,
.cell.x::after,
.large-cell.large-x::before,
.large-cell.large-x::after,
.cell.circle::before,
.large-cell.large-circle::before {
  background-color: black;
}

.board .cell:not(.x):not(.circle):hover::before,
.board .cell:not(.x):not(.circle):hover::after {
  background-color: lightgrey;
}

.cell.x::before,
.cell.x::after,
.board.x .cell:not(.x):not(.circle):hover::before,
.board.x .cell:not(.x):not(.circle):hover::after {
  content: "";
  position: absolute;
  width: calc(var(--marker-size) * 0.15);
  height: var(--marker-size);
}

.large-cell.large-x::before,
.large-cell.large-x::after {
  content: "";
  position: absolute;
  width: calc(var(--large-marker-size) * 0.15);
  height: var(--large-marker-size);
  background-color: black;
}

.cell.x::before,
.large-cell.large-x::before,
.board.x .cell:not(.x):not(.circle):hover::before {
  transform: rotate(45deg);
}

.cell.x::after,
.large-cell.large-x::after,
.board.x .cell:not(.x):not(.circle):hover::after {
  transform: rotate(-45deg);
}

.cell.circle::before,
.cell.circle::after,
.large-cell.large-circle::before,
.large-cell.large-circle::after,
.board.circle .cell:not(.x):not(.circle):hover::before,
.board.circle .cell:not(.x):not(.circle):hover::after {
  content: "";
  position: absolute;
  border-radius: 50%;
}

.cell.circle::before,
.board.circle .cell:not(.x):not(.circle):hover::before,
.board.disable-click .cell.circle::before,
.cell.circle.disable-click::before,
.board.disable-click .board.circle .cell:not(.x):not(.circle):hover::before,
.cell.circle.disable-click .cell:not(.x):not(.circle):hover::before {
  width: var(--marker-size);
  height: var(--marker-size);
}
.cell.circle::after,
.board.circle .cell:not(.x):not(.circle):hover::after {
  width: calc(var(--marker-size) * 0.7);
  height: calc(var(--marker-size) * 0.7);
  background-color: white;
}
.board.disable-click .cell.circle::after,
.cell.circle.disable-click::after,
.board.disable-click .board.circle .cell:not(.x):not(.circle):hover::after,
.cell.circle.disable-click .cell:not(.x):not(.circle):hover::after {
  width: calc(var(--marker-size) * 0.7);
  height: calc(var(--marker-size) * 0.7);
  background-color: lightgrey;
}

.large-cell.large-circle::before,
.board.disable-click .large-cell.large-circle::before,
.large-cell.large-circle.disable-click::before {
  width: var(--large-marker-size);
  height: var(--large-marker-size);
}
.large-cell.large-circle::after {
  width: calc(var(--large-marker-size) * 0.7);
  height: calc(var(--large-marker-size) * 0.7);
  background-color: white;
}
.board.disable-click .large-cell.large-circle::after,
.large-cell.large-circle.disable-click::after {
  width: calc(var(--large-marker-size) * 0.7);
  height: calc(var(--large-marker-size) * 0.7);
  background-color: lightgrey;
}

@media (max-width: 768px) {
  .container {
    grid-template-columns: repeat(3, minmax(100px, 1fr));
  }
  .super-cool {
    font-size: 2rem;
  }
  .noughts-and-crosses-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-wrap: wrap;
    font-size: 3rem;
  }
  .how-to-play {
    font-size: var(--small-padding);
  }
  .view-turn {
    flex-wrap: wrap;
    flex-direction: column;
    align-items: initial;
  }
  .cell {
    width: var(--media-492px-cell-size);
    height: var(--media-492px-cell-size);
  }
  .cell.x::before,
  .cell.x::after,
  .board.x .cell:not(.x):not(.circle):hover::before,
  .board.x .cell:not(.x):not(.circle):hover::after {
    width: calc(--media-492px-marker-size * 0.15);
    height: var(--media-492px-marker-size);
  }
  .large-cell.large-x::before,
  .large-cell.large-x::after {
    width: calc(--media-492px-large-marker-size * 0.15);
    height: var(--media-492px-large-marker-size);
  }
  .cell.circle::before,
  .board.circle .cell:not(.x):not(.circle):hover::before,
  .board.disable-click .cell.circle::before,
  .cell.circle.disable-click::before,
  .board.disable-click .board.circle .cell:not(.x):not(.circle):hover::before,
  .cell.circle.disable-click .cell:not(.x):not(.circle):hover::before {
    width: calc(var(--media-492px-marker-size) - 2px);
    height: calc(var(--media-492px-marker-size) - 2px);
  }
  .cell.circle::after,
  .board.circle .cell:not(.x):not(.circle):hover::after,
  .board.disable-click .cell.circle::after,
  .cell.circle.disable-click::after,
  .board.disable-click .board.circle .cell:not(.x):not(.circle):hover::after,
  .cell.circle.disable-click .cell:not(.x):not(.circle):hover::after {
    width: calc(var(--media-492px-marker-size) * 0.4);
    height: calc(var(--media-492px-marker-size) * 0.4);
  }

  .large-cell.large-circle::before,
  .board.disable-click .large-cell.large-circle::before,
  .large-cell.large-circle.disable-click::before {
    width: var(--media-492px-large-marker-size);
    height: var(--media-492px-large-marker-size);
  }
  .large-cell.large-circle::after,
  .board.disable-click .large-cell.large-circle::after,
  .large-cell.large-circle.disable-click::after {
    width: calc(var(--media-492px-large-marker-size) * 0.5);
    height: calc(var(--media-492px-large-marker-size) * 0.5);
  }
}

